disable comma based lists while reading neo4j config jvm args
(cherry picked from commit 2345074964e61da74b6b6c6d0fc75e1f5f95b50d)
(cherry picked from commit 0f1afcaed6622dd1da955bdfe767d0d8c75a1771)